<resources>
    <string name="app_name">TransporterDriver</string>
    <string name="drive_with_transporter">Drive with Transporter</string>

    <string name="google_maps_key">AIzaSyBHB7IhgyG56XRFOrO7ta2buraNMyc4EIM</string>
    <string name="login">Login</string>
    <string name="register">Register</string>

    <string name="phone_num_hint">Phone number</string>
    <string name="country_code_hint">Country Code</string>
    <string name="get_otp">Get OTP</string>

    <string-array name="countries">
        <!--<item>Philippines +63</item>-->
        <item>Romania +40</item>
    </string-array>

    <string name="otp_prompt_tv">Enter One Time Password</string>
    <string name="otp_info_tv">One Time Password (OTP) has been sent to your phone number. Please enter the same here to login.</string>
    <string name="otp_continue_text">Continue</string>
    <string name="resend_code">Resend Code</string>

    <!--<string name="letters_only">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>-->
    <string name="letters_only"></string>
    <string name="email_only">abcdefghijklmnopqrstuvwxyzzABCDEFGHIJKLMNOPQRSTUVWXYZ.0123456789@</string>
    <string name="password_only">abcdefghijklmnopqrstuvwxyzzABCDEFGHIJKLMNOPQRSTUVWXYZ._0123456789</string>
    <string name="phone_only">0123456789</string>

    <string name="continue_login_text"><![CDATA[Continue & Login]]></string>
    <string name="full_name_hint">Full Name</string>
    <string name="email_hint">Email Id</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_pickup_location">Pickup Location</string>
    <string name="enter_drop_location">Drop Location</string>
    <string name="phone_textview">To Commence Your Driver Experience, Kindly Input Your Correct Phone Number with Proper Country Code</string>
    <string name="driver_register">Register as Driver</string>
    <string name="forgot_pwd_tv">Forgot Password?</string>
    <string name="bio_data">Bio Data</string>
    <string name="dob_hint">Date of Birth</string>
    <string name="emergency_con_name_hint">Name of Contact</string>
    <string name="next">NEXT</string>
    <string name="emergency_con_phone_hint">Contact Phone Number</string>

</resources>
