<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DriverProfileActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/otp_gray"
        android:id="@+id/toolbar"
        android:minHeight="?android:attr/actionBarSize">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bio_data"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:fontFamily="sans-serif-condensed"/>

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_below="@id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar">

            <RelativeLayout
                android:id="@+id/profileImgLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/driverProfileCIV"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/profile_avatar"
                    app:civ_border_width="1dp"
                    app:civ_border_color="@color/colorPrimary"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="18dp"
                android:layout_below="@+id/profileImgLayout"
                android:layout_marginBottom="20dp">

                <EditText
                    android:id="@+id/nameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/et_icon_bkg"
                    android:hint="@string/full_name_hint"
                    android:gravity="center"
                    android:textColorHint="@color/bluish"
                    android:inputType="textPersonName"
                    android:enabled="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:maxLines="1"
                    android:maxLength="30"
                    android:digits="@string/letters_only"
                    android:drawableLeft="@drawable/person"
                    android:drawablePadding="10dp"
                    android:padding="15dp"
                    android:layout_marginTop="16dp"
                    android:elevation="10dp"/>

                <EditText
                    android:id="@+id/emailET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/et_icon_bkg"
                    android:hint="@string/email_hint"
                    android:gravity="center"
                    android:textColorHint="@color/bluish"
                    android:inputType="textEmailAddress"
                    android:enabled="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:maxLines="1"
                    android:maxLength="30"
                    android:digits="@string/email_only"
                    android:drawableLeft="@drawable/email"
                    android:drawablePadding="10dp"
                    android:padding="15dp"
                    android:layout_marginTop="16dp"
                    android:elevation="10dp"/>

                <EditText
                    android:id="@+id/calendarET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/et_icon_bkg"
                    android:hint="@string/dob_hint"
                    android:gravity="center"
                    android:textColorHint="@color/bluish"
                    android:inputType="date"
                    android:focusableInTouchMode="false"
                    android:focusable="false"
                    android:maxLines="1"
                    android:maxLength="30"
                    android:digits="@string/email_only"
                    android:drawableLeft="@drawable/calendar"
                    android:drawablePadding="10dp"
                    android:padding="15dp"
                    android:layout_marginTop="16dp"
                    android:elevation="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Add One Emergency Contact (Optional)"
                    android:textSize="16sp"
                    android:textStyle="italic"
                    android:textColor="@color/colorAccent"
                    android:layout_marginTop="10dp"/>

                <EditText
                    android:id="@+id/emergencyContactNameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/et_icon_bkg"
                    android:hint="@string/emergency_con_name_hint"
                    android:gravity="center"
                    android:textColorHint="@color/bluish"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:maxLength="30"
                    android:digits="@string/email_only"
                    android:drawableLeft="@drawable/emergency_contact"
                    android:drawablePadding="10dp"
                    android:padding="15dp"
                    android:layout_marginTop="16dp"
                    android:elevation="10dp"/>

                <EditText
                    android:id="@+id/emergencyContactPhoneET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/et_icon_bkg"
                    android:hint="@string/emergency_con_phone_hint"
                    android:gravity="center"
                    android:textColorHint="@color/bluish"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:maxLength="10"
                    android:digits="@string/phone_only"
                    android:drawableLeft="@drawable/phone"
                    android:drawablePadding="10dp"
                    android:padding="15dp"
                    android:layout_marginTop="16dp"
                    android:elevation="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/nextLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@color/otp_gray"
                android:layout_alignParentBottom="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/next"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="@color/white"/>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>