<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/actionBarSize"
        android:id="@+id/toolbar"
        android:background="@color/colorPrimary">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/driver_register"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:fontFamily="sans-serif-condensed"
                android:layout_centerVertical="true"
                />

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        android:layout_below="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Login with Social Account Providers"
                android:textSize="18sp"
                android:gravity="center_horizontal"
                android:textColor="@color/otp_gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="3"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/facebookLoginIV"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/facebook_logo"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"/>

                <ImageView
                    android:id="@+id/twitterLoginIV"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/twitter_logo"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"/>

                <ImageView
                    android:id="@+id/googleLoginIV"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/google_plus_logo"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:gravity="center_vertical">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/gray"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:text="OR"
                    android:textSize="20sp"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/gray"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/gray"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/et_fullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/et_icon_bkg"
                    android:hint="@string/full_name_hint"
                    android:gravity="center"
                    android:textColorHint="@color/otp_gray"
                    android:inputType="text|textPersonName"
                    android:maxLines="1"
                    android:maxLength="18"
                    android:drawableLeft="@drawable/person"
                    android:drawablePadding="10dp"
                    android:padding="15dp"
                    android:layout_marginTop="12dp"
                    android:elevation="10dp"/>

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/et_icon_bkg"
                    android:hint="@string/email_hint"
                    android:gravity="center"
                    android:textColorHint="@color/otp_gray"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:maxLength="30"
                    android:digits="@string/email_only"
                    android:drawableLeft="@drawable/email"
                    android:drawablePadding="10dp"
                    android:padding="15dp"
                    android:layout_marginTop="12dp"
                    android:elevation="10dp"/>

                <EditText
                    android:id="@+id/et_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/et_icon_bkg"
                    android:hint="@string/password_hint"
                    android:gravity="center"
                    android:textColorHint="@color/otp_gray"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:maxLength="10"
                    android:digits="@string/password_only"
                    android:drawableLeft="@drawable/lock"
                    android:drawablePadding="10dp"
                    android:padding="15dp"
                    android:layout_marginTop="12dp"
                    android:elevation="10dp"/>

                <EditText
                    android:id="@+id/et_confirm_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/et_icon_bkg"
                    android:hint="@string/confirm_password_hint"
                    android:gravity="center"
                    android:textColorHint="@color/otp_gray"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:maxLength="10"
                    android:digits="@string/password_only"
                    android:drawableLeft="@drawable/lock"
                    android:drawablePadding="10dp"
                    android:padding="15dp"
                    android:layout_marginTop="12dp"
                    android:elevation="10dp"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>